--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -56,7 +56,7 @@ a:hover {
 
 .text-box {
     width: 90%;
-    color: white;
+    color: #c89b3c;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -67,7 +67,30 @@ a:hover {
     font-size: 62px;
 }
 .text-box p {
-    margin: 10px 0 40px;
+    margin: 20px 0 30px;
     font-size: 20px;
-    color: #c89b3c;
+    color: #CDFAFA;
+}
+
+.FRQ {
+    color: white;
+    background: #091428;
+    font-size: 20px;
+    text-align: left;
+}
+.FRQ h2 {
+    text-align: center;
+    color: #0AC8B9;
+}
+
+.FRQ h3 {
+    color: #F0E6D2
+}
+
+.FRQ p {
+    color: #CDFAFA
+}
+
+.POPULAR{
+    text-align: left;
 }
