--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,17 +5,17 @@
     list-style: none;
     box-sizing: border-box;
 }
-.body {
-    background: #091428;
+body {
+    background: #1c1a24;
     min-height: 100vh;
     width: 100%;
-    font-family: arial;
+    font-family: "Monserrat", Verdana, sans-serif;
 }
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(9, 18, 56, 0.7), #16245fb3),
-        url(/images/awakened.jpg);
+    background-image: linear-gradient(rgba(238, 34, 194, 0.7), #640a3fb3),
+        url(/images/starguardian.jpg);
     background-size: cover;
     position: relative;
 }
@@ -27,6 +27,7 @@ nav {
 }
 label.logo {
     color: white;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     font-size: 35px;
     line-height: 80px;
     padding: 0 100px;
@@ -50,47 +51,80 @@ nav u1 li a {
 }
 a.active,
 a:hover {
-    background: #c89b3c;
+    background: #f589e9;
     transition: 0.5s;
 }
 
-.text-box {
+.main1 {
     width: 90%;
-    color: #c89b3c;
+    color: white;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
 }
-.text-box h1 {
-    font-size: 62px;
+.main1 h1 {
+    font-size: 60px;
 }
-.text-box p {
+.main1 p {
     margin: 20px 0 30px;
     font-size: 20px;
-    color: #CDFAFA;
+    color: #ffffff;
 }
 
+.main2,
+.main3,
+.popular-content,
 .FRQ {
-    color: white;
-    background: #091428;
-    font-size: 20px;
-    text-align: left;
+    padding-left: 48px;
+    padding-right: 48px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+    margin: 0px auto;
 }
+
+.main2 h2,
+.main3 h2,
+.popular-content h2,
 .FRQ h2 {
-    text-align: center;
-    color: #0AC8B9;
+    overflow-wrap: break-word;
+    text-wrap: balance;
+    word-break: break-word;
+    font-family: Georgia, Times "Times New Roman", Times, serif, Times, serif;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 60px;
+    line-height: 120px;
+    color: #f589e9;
 }
 
+.main2 h3,
+.main3 h3,
+.popular-content h3,
 .FRQ h3 {
-    color: #F0E6D2
-}
-
-.FRQ p {
-    color: #CDFAFA
-}
-
-.POPULAR{
+    color: #e75168;
+    font-family: Georgia, Times "Times New Roman", Times, serif, Times, serif;
+    text-transform: uppercase;
     text-align: left;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 500;
+}
+
+.main2 p,
+.main3 p,
+.popular-content p,
+.FRQ p {
+    color: #ffffff;
+    text-align: left;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 400;
+}
+
+.footer {
+    background: #091428;
+    color: #e75168;
+    font-size: 18px;
 }
