--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,6 +13,16 @@
     src: url(/fontstest/adobe-garamond-pro-2/AGaramondPro-Regular.otf);
 }
 
+@font-face {
+    font-family: "Montserrat";
+    src: url(/fontstest/Montserrat/static/Montserrat-Regular.ttf);
+}
+
+@font-face {
+    font-family: "textFont";
+    src: url(/fontstest/DM_Sans/static/DMSans-Regular.ttf);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -25,7 +35,7 @@ body {
     color: #e9e9ff;
     min-height: 100vh;
     width: 100%;
-    font-family: Georgia;
+    font-family: "textFont";
 }
 .header {
     min-height: 100vh;
@@ -123,11 +133,13 @@ a:hover {
 .popular-content h3,
 .FRQ h3 {
     color: rgb(239, 85, 108);
+    font-family: "Montserrat", Helvetica, sans-serif;
     text-transform: uppercase;
     text-align: left;
     font-size: 18px;
     line-height: 28px;
     font-weight: 500;
+    letter-spacing: 2px;
 }
 
 .main2 p,
@@ -140,12 +152,26 @@ a:hover {
     font-weight: 400;
     margin-bottom: 1em;
 }
-.esportsButton {
-    background-color: #f589e9;
+
+/* IN PROGRESS */
+.Button {
+    font-family: "Montserrat", Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 19px;
+    background-color: #0a1231;
+    border: 1px solid #494f66;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-block;
+    letter-spacing: 1px;
+    padding: 22px 44px;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
 }
 
-.guidesButton {
-    background-color: #f589e9;
+.Button p {
+    font-size: 25px;
 }
 
 .footer {
