--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -158,13 +158,14 @@ a:hover {
     font-family: "Montserrat", Helvetica, sans-serif;
     font-weight: 700;
     font-size: 19px;
-    background-color: #0a1231;
+    background-color: #e75168;
+    /* background-color: #0a1231; */
     border: 1px solid #494f66;
     color: #ffffff;
     cursor: pointer;
     display: inline-block;
     letter-spacing: 1px;
-    padding: 22px 44px;
+    padding: 15px 20px;
     position: relative;
     text-align: center;
     text-transform: uppercase;
