--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -31,7 +31,10 @@
     box-sizing: border-box;
 }
 body {
-    background: #1c1a24;
+    background-image: url(/images/dr5.jpg);
+    background-size: cover;
+    background-position: relative;
+    /*background: #1c1a24;*/
     color: #e9e9ff;
     min-height: 100vh;
     width: 100%;
@@ -158,9 +161,9 @@ a:hover {
     font-family: "Montserrat", Helvetica, sans-serif;
     font-weight: 700;
     font-size: 19px;
-    background-color: #e75168;
+    background-color: #432c9b;
     /* background-color: #0a1231; */
-    border: 1px solid #494f66;
+    border: 1px solid #ffffff;
     color: #ffffff;
     cursor: pointer;
     display: inline-block;
