--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -31,10 +31,7 @@
     box-sizing: border-box;
 }
 body {
-    background-image: url(/images/dr5.jpg);
-    background-size: cover;
-    background-position: relative;
-    /*background: #1c1a24;*/
+    background: #1c1a24;
     color: #e9e9ff;
     min-height: 100vh;
     width: 100%;
