--- a/CSS/about.css
+++ b/CSS/about.css
@@ -130,3 +130,21 @@ a:hover {
     color: #e75168;
     font-size: 18px;
 }
+
+.background {   
+    min-height: 100vh;
+    width: 100%;
+    background-image: url("/images/background.webp");
+    background-size: cover;
+    position: relative;
+    opacity: 1.0;
+  }
+.background h1 {
+    width: 90%;
+    color: rgb(255, 255, 255);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+} 
