--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,5 +1,28 @@
 /* RICKY WORK ON THIS */
+@font-face {
+    font-family: "headbarFont";
+    src: url(/fontstest/Poppins/Poppins-Regular.ttf);
+}
 
+@font-face {
+    font-family: "h1Font";
+    src: url(/fontstest/BeaufortforLOL-Regular.ttf);
+}
+
+@font-face {
+    font-family: "h2Font";
+    src: url(/fontstest/adobe-garamond-pro-2/AGaramondPro-Regular.otf);
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(/fontstest/Montserrat/static/Montserrat-Regular.ttf);
+}
+
+@font-face {
+    font-family: "textFont";
+    src: url(/fontstest/DM_Sans/static/DMSans-Regular.ttf);
+}
 * {
     margin: 0;
     padding: 0;
@@ -137,14 +160,20 @@ a:hover {
     background-image: url("/images/background.webp");
     background-size: cover;
     position: relative;
-    opacity: 1.0;
+    opacity: 0.7;
   }
-.background h1 {
+.main1 h1{
     width: 90%;
     color: rgb(255, 255, 255);
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: -230px;
+    left: 650px;
+    right: 4000px;
     transform: translate(-50%, -50%);
     text-align: center;
+    font-size: 60px;
+    font-family: "h1Font";
 } 
+.main1 p{   
+    margin-top: -180px;
+}
