--- a/CSS/about.css
+++ b/CSS/about.css
@@ -163,17 +163,42 @@ a:hover {
     opacity: 0.7;
   }
 .main1 h1{
-    width: 90%;
+    width: 100%;
     color: rgb(255, 255, 255);
     position: absolute;
-    top: -230px;
-    left: 650px;
-    right: 4000px;
-    transform: translate(-50%, -50%);
+    top: 0px;
+    left: 0px;
     text-align: center;
     font-size: 60px;
     font-family: "h1Font";
 } 
 .main1 p{   
-    margin-top: -190px;
+    margin-top: 80px;
+}
+
+.textAreaColumn{
+    background-color: #ffffff;
+    width:100%;   
+}
+.textAreaColumn div{
+    float:left;
+    width:33%;
+    padding:10px;
+    box-sizing: border-box;
+    color:rgb(255, 255, 255);
+}
+
+.textAreaColumn div span{
+    display:block;
+    text-align:center;
+}
+
+.textAreaColumn div textarea{
+    background: transparent;
+    box-sizing: border-box;
+    width:100%;
+    border:3px solid red;
+    min-height:400px;
+    color:rgb(255, 255, 255);
+
 }
