--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -26,12 +26,10 @@
 * {
     margin: 0;
     padding: 0;
-    text-decoration: none;
-    list-style: none;
+    font-family: "headbarFont";
     box-sizing: border-box;
 }
 body {
-    margin: 0;
     background: #1c1a24;
     color: #e9e9ff;
     font-size: 18px;
@@ -39,55 +37,118 @@ body {
     font-family: "textFont";
 }
 .header {
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(238, 34, 194, 0.7), #640a3fb3),
-        url(/images/starguardian.jpg);
-    background-size: cover;
+    background-image: linear-gradient(
+        rgba(12, 3, 51, 0.3),
+        rgba(12, 3, 51, 0.3)
+    );
+    display: flex;
+    align-items: center;
+    padding: 0 5%;
     position: relative;
+    justify-content: center;
+}
+
+.header a {
+    text-decoration: none;
+    font-size: 24px;
+    border: 1px solid #fff;
+    display: inline-block;
+    padding: 14px 70px;
+    border-radius: 50px;
+    margin-top: 20px;
+}
+
+.back-video {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+@media (min-aspect-ratio: 16/9) {
+    .back-video {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media (max-aspect-ratio: 16/9) {
+    .back-video {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 nav {
-    background: #091428;
-    height: 80px;
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 20px 8%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-label.logo {
-    color: white;
-    font-family: "h1Font";
-    font-size: 35px;
-    line-height: 80px;
-    padding: 0 100px;
-    font-weight: bold;
+
+nav .logo {
+    width: 80px;
 }
-nav u1 {
-    float: right;
-    margin-right: 20px;
-}
-nav u1 li {
+
+nav ul li {
+    list-style: none;
     display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+    margin-left: 40px;
 }
-nav u1 li a {
+
+nav ul li a {
     font-family: "headbarFont";
-    color: white;
-    font-size: 15px;
-    font-weight: 600;
-    line-height: 120%;
-    letter-spacing: 0.08em;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
+    text-decoration: none;
+    color: #e9e9ff;
+    font-size: 17px;
 }
+
 a.active,
 a:hover {
     background: #f589e9;
     transition: 0.5s;
 }
+.divider {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin: 48px auto 0px;
+}
+
+.dividerlinetop {
+    margin-right: -8px;
+    background-image: linear-gradient(
+        90deg,
+        rgba(0, 0, 0, 0),
+        hsla(0, 0%, 100%, 0.41)
+    );
+    margin-right: -16px;
+    height: 1px;
+    max-width: 400px;
+    width: 35%;
+}
+
+.dividerlinebottom {
+    margin-left: -8px;
+    background-image: linear-gradient(
+        90deg,
+        hsla(0, 0%, 100%, 0.41),
+        rgba(0, 0, 0, 0)
+    );
+    margin-left: -16px;
+    height: 1px;
+    max-width: 400px;
+    width: 35%;
+}
 
 .main1 {
-    width: 90%;
+    width: 100%;
     color: white;
     position: absolute;
     top: 50%;
@@ -103,6 +164,13 @@ a:hover {
     text-align: center;
     text-wrap: balance;
     line-height: 20px;
+}
+.line {
+    width: 100px;
+    height: 4px;
+    background: #1c1a24;
+    margin: 10px auto;
+    border-radius: 5px;
 }
 
 .main2 h2,
@@ -155,7 +223,6 @@ a:hover {
     justify-content: space-between;
     padding: 48px;
     width: 100%;
-    margin: auto 0 auto;
 }
 
 .main2 img {
@@ -163,11 +230,23 @@ a:hover {
 }
 
 .main2 p {
-    margin-right: 15px;
+    margin-right: 10px;
 }
 
 .main2text {
     width: 40%;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.row .col {
+    display: flex;
+    flex-direction: column;
 }
 
 .main3 {
@@ -175,19 +254,31 @@ a:hover {
     justify-content: space-between;
     padding: 48px;
     width: 100%;
-    margin: auto 0 auto;
 }
 
 .main3 img {
-    height: 250px;
+    transform: 0.3s ease;
+}
+
+.main3 img:hover {
+    transform: scale(1.1);
 }
 
 .main3 p {
-    margin-right: 15px;
+    margin-right: 10px;
 }
 
-.main3text {
-    width: 40%;
+.main3 .row .col {
+    width: 45%;
+}
+.main3 .image-gallery {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.image-gallery img {
+    width: calc(50% - 20px);
+    margin: 10px;
 }
 
 .FRQ {
