--- a/CSS/about.css
+++ b/CSS/about.css
@@ -26,8 +26,7 @@
 * {
     margin: 0;
     padding: 0;
-    text-decoration: none;
-    list-style: none;
+    font-family: "headbarFont";
     box-sizing: border-box;
 }
 body {
@@ -37,43 +36,60 @@ body {
     font-family: "FF Mark W05", Arial, sans-serif;
 }
 .header {
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(238, 34, 194, 0.7), #640a3fb3),
-        url(/images/starguardian.jpg);
-    background-size: cover;
+    background-image: linear-gradient(
+        rgba(12, 3, 51, 0.3),
+        rgba(12, 3, 51, 0.3)
+    );
+    display: flex;
+    align-items: center;
+    padding: 0 5%;
     position: relative;
+    justify-content: center;
+}
+.header a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 0.08em;
+    padding: 7px 13px;
+    border-radius: 3px;
+    /* border: 1px solid #fff;
+    display: inline-block;
+    padding: 14px 70px;
+    border-radius: 50px;
+    margin-top: 20px; */
 }
 
 nav {
-    background: #091428;
-    height: 80px;
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 20px 8%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-label.logo {
-    color: white;
-    font-family: "FF Mark W05", Arial, sans-serif;
-    font-size: 35px;
-    line-height: 80px;
-    padding: 0 100px;
-    font-weight: bold;
+
+nav .logo {
+    width: 80px;
 }
-nav u1 {
-    float: right;
-    margin-right: 20px;
-}
-nav u1 li {
+
+nav ul li {
+    list-style: none;
     display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+    margin-left: 40px;
 }
-nav u1 li a {
-    color: white;
+
+nav ul li a {
+    font-family: "headbarFont";
+    text-decoration: none;
+    color: #e9e9ff;
     font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
 }
+
 a.active,
 a:hover {
     background: #f589e9;
@@ -154,15 +170,15 @@ a:hover {
     font-size: 18px;
 }
 
-.background {   
+.background {
     min-height: 100vh;
     width: 100%;
     background-image: url("/images/background.webp");
     background-size: cover;
     position: relative;
     opacity: 0.7;
-  }
-.main1 h1{
+}
+.main1 h1 {
     width: 100%;
     color: rgb(255, 255, 255);
     position: absolute;
@@ -171,34 +187,33 @@ a:hover {
     text-align: center;
     font-size: 60px;
     font-family: "h1Font";
-} 
-.main1 p{   
+}
+.main1 p {
     margin-top: 80px;
 }
 
-.textAreaColumn{
+.textAreaColumn {
     background-color: #ffffff;
-    width:100%;   
+    width: 100%;
 }
-.textAreaColumn div{
-    float:left;
-    width:33%;
-    padding:10px;
+.textAreaColumn div {
+    float: left;
+    width: 33%;
+    padding: 10px;
     box-sizing: border-box;
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
 }
 
-.textAreaColumn div span{
-    display:block;
-    text-align:center;
+.textAreaColumn div span {
+    display: block;
+    text-align: center;
 }
 
-.textAreaColumn div textarea{
+.textAreaColumn div textarea {
     background: transparent;
     box-sizing: border-box;
-    width:100%;
-    border:3px solid red;
-    min-height:400px;
-    color:rgb(255, 255, 255);
-
+    width: 100%;
+    border: 3px solid red;
+    min-height: 400px;
+    color: rgb(255, 255, 255);
 }
