--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -30,7 +30,7 @@
     box-sizing: border-box;
 }
 body {
-    background: #1c1a24;
+    background: #091428;
     color: #e9e9ff;
     font-size: 18px;
     font-weight: 400px;
@@ -52,12 +52,33 @@ body {
 
 .header a {
     text-decoration: none;
-    font-size: 24px;
-    border: 1px solid #fff;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 0.08em;
+    padding: 7px 13px;
+    border-radius: 3px;
+    /* border: 1px solid #fff;
     display: inline-block;
     padding: 14px 70px;
     border-radius: 50px;
-    margin-top: 20px;
+    margin-top: 20px; */
+}
+.header .buttonPrimary {
+    border: 0;
+    text-align: center;
+    text-wrap: balance;
+    display: inline-block;
+    padding: 19px 34px;
+    width: fit-content;
+    margin-top: 25px;
+    line-height: 26px;
+    color: #ffffff;
+    background-color: #1c1a24;
+    border-radius: 10px;
+    font-family: "Montserrat", Helvetica, sans-serif;
+    font-weight: 700;
+    text-decoration: none;
+    transition: 200ms ease-out;
 }
 
 .back-video {
@@ -168,7 +189,6 @@ a:hover {
 .line {
     width: 100px;
     height: 4px;
-    background: #1c1a24;
     margin: 10px auto;
     border-radius: 5px;
 }
@@ -214,27 +234,27 @@ a:hover {
 }
 
 .popular-content {
-    background-color: #1c1a24;
     padding: 48px;
 }
 
 .main2 {
+    width: 100%;
+    height: 60vh;
     display: flex;
     justify-content: space-between;
-    padding: 48px;
-    width: 100%;
-}
-
-.main2 img {
-    height: 250px;
-}
-
-.main2 p {
-    margin-right: 10px;
+    background-image: url(/images/34f078fc9598cb908d1d878da1b64304e3800310-1600x900.jpg);
+    background-position: center;
+    background-size: contain;
 }
 
 .main2text {
-    width: 40%;
+    width: 60%;
+    padding: 50px;
+    color: whitesmoke;
+}
+
+.main2text h1 {
+    margin: 50px;
 }
 
 .row {
