--- a/CSS/about.css
+++ b/CSS/about.css
@@ -30,7 +30,7 @@
     box-sizing: border-box;
 }
 body {
-    background: #1c1a24;
+    background: #000000;
     min-height: 100vh;
     width: 100%;
     font-family: "FF Mark W05", Arial, sans-serif;
@@ -41,7 +41,7 @@ body {
     width: 100%;
     background-image: linear-gradient(
         rgba(12, 3, 51, 0.3),
-        rgba(12, 3, 51, 0.3)
+        rgba(0, 0, 0, 0.3)
     );
     display: flex;
     align-items: center;
@@ -166,31 +166,64 @@ a:hover {
 }
 
 .footer {
-    background: #091428;
+    background: #000000;
     color: #e75168;
     font-size: 18px;
 }
 
-.background {
-    min-height: 100vh;
-    width: 100%;
-    background-image: url("/images/background.webp");
-    background-size: cover;
+.back-video1 {
     position: relative;
-    opacity: 0.7;
+        width: 40vw; /* Cover half of the viewport width */
+        height: 100vh;
+        object-fit: cover;
+        transform: translateY(10%);
+}
+
+@media (min-aspect-ratio: 16/9) {
+    .back-video1 {
+        height: 105vh;
+        transform: translateY(25.5%);
+    }
+}
+
+@media (max-aspect-ratio: 16/9) {
+    .back-video1 {
+        width: 55vw;
+        height: 83vh;
+        transform: translate(-50%, 10%);
+    }
+}
+
+.background {
+    height: 200vh;
+    width: 200%;
+    /*background-image: url("/images/background.webp"); <img src="images/Victory.jpg" alt="" /> */
+    display: flex;
+    align-items: center;
+    padding: 0 5%;
+    position: relative;
+    justify-content: center;
+    overflow: hidden;
 }
 .main1 h1 {
-    width: 100%;
+    width: 130%;
     color: rgb(255, 255, 255);
     position: absolute;
-    top: 0px;
+    top: -250px;
     left: 0px;
     text-align: center;
     font-size: 60px;
     font-family: "h1Font";
 }
 .main1 p {
-    margin-top: 80px;
+    width: 130%;
+    color: rgb(255, 255, 255);
+    position: absolute;
+    top: -180px;
+    left: 0px;
+    text-align: center;
+    font-size: 20px;
+    font-family: "h1Font";
 }
 
 .textAreaColumn {
