--- a/CSS/guides.css
+++ b/CSS/guides.css
@@ -38,10 +38,8 @@ body {
 .header {
     height: 100vh;
     width: 100%;
-    background-image: linear-gradient(
-        rgba(12, 3, 51, 0.3),
-        rgba(12, 3, 51, 0.3)
-    );
+    background-image: url(/images/guidesbackground.jpeg);
+    background-size: cover;
     display: flex;
     align-items: center;
     padding: 0 5%;
@@ -55,11 +53,6 @@ body {
     letter-spacing: 0.08em;
     padding: 7px 13px;
     border-radius: 3px;
-    /* border: 1px solid #fff;
-  display: inline-block;
-  padding: 14px 70px;
-  border-radius: 50px;
-  margin-top: 20px; */
 }
 
 nav {
@@ -268,4 +261,37 @@ li {
     line-height: 28px;
     font-weight: 400;
     margin-bottom: 1em;
+}
+
+.divider {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin: 48px auto 0px;
+}
+
+.dividerlinetop {
+    margin-right: -8px;
+    background-image: linear-gradient(
+        90deg,
+        rgba(0, 0, 0, 0),
+        hsla(0, 0%, 100%, 0.41)
+    );
+    margin-right: -16px;
+    height: 1px;
+    max-width: 400px;
+    width: 35%;
+}
+
+.dividerlinebottom {
+    margin-left: -8px;
+    background-image: linear-gradient(
+        90deg,
+        hsla(0, 0%, 100%, 0.41),
+        rgba(0, 0, 0, 0)
+    );
+    margin-left: -16px;
+    height: 1px;
+    max-width: 400px;
+    width: 35%;
 }
