--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -26,6 +26,8 @@
 * {
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
+    scroll-padding-top: 2rem;
     font-family: "headbarFont";
     box-sizing: border-box;
 }
@@ -58,10 +60,10 @@ body {
     padding: 7px 13px;
     border-radius: 3px;
     /* border: 1px solid #fff;
-    display: inline-block;
-    padding: 14px 70px;
-    border-radius: 50px;
-    margin-top: 20px; */
+  display: inline-block;
+  padding: 14px 70px;
+  border-radius: 50px;
+  margin-top: 20px; */
 }
 .header .buttonPrimary {
     border: 0;
@@ -370,3 +372,169 @@ li {
     margin-bottom: 1em;
 }
 
+/*BLOG SECTION START HERE*/
+:root {
+    --container-color: #1a1e21;
+    --second-color: #e75168;
+    --text-color: white;
+    --bg-color: #091428;
+}
+
+/*Filter Section CSS */
+.post-filter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1.5rem;
+    margin-top: 2rem !important;
+}
+.filter-item {
+    font-size: 0.9rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+.active-filter {
+    background: #e75168;
+    color: white;
+    padding: 4px 10px;
+    border-radius: 4px;
+}
+
+/*Posts */
+.post {
+    display: grid;
+    padding: 48px;
+    grid-template-columns: repeat(auto-fit, minmax(280px, auto));
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+.post-box {
+    background: #1d202b;
+    box-shadow: 0 4px 14px hsl(355deg 25% 15% / 10%);
+    padding: 15px;
+    border-radius: 0.5rem;
+}
+.post-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 0.5rem;
+}
+.category {
+    font-size: 0.9rem;
+    color: rgb(239, 85, 108);
+    font-family: "Montserrat", Helvetica, sans-serif;
+    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 500;
+    letter-spacing: 2px;
+}
+.post-title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    font-family: "h1Font", Arial, sans-serif;
+    font-weight: 700;
+    font-size: 1.3rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #f589e9;
+}
+.post-date {
+    display: flex;
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    font-family: "textFont";
+    font-weight: 400;
+    margin-top: 4px;
+}
+.post-description {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+    margin: 5px 0 10px;
+    font-size: 18px;
+    font-weight: 400px;
+    font-family: "textFont";
+}
+.profile {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.profile-img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    border: 2px solid #e75168;
+}
+.profile-name {
+    font-size: 0.82rem;
+    font-weight: 500;
+}
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 48px;
+}
+.footer p {
+    font-size: 0.938rem;
+}
+.social {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+}
+
+.social .bx {
+    font-size: 1.4rem;
+    color: #e9e9ff;
+}
+.social .bx:hover {
+    color: #e75168;
+    transition: 0.3s all linear;
+}
+/*Post Content*/
+.post-header {
+    width: 100%;
+    height: 500px;
+    background: #1c1a24;
+}
+.post-container {
+    max-width: 800px;
+    margin: auto;
+    width: 100%;
+}
+.header-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4rem !important;
+}
+.back-home {
+    color: #e75168;
+    font-size: 0.9rem;
+}
+.header-title {
+    width: 90%;
+    font-size: 2.6rem;
+    color: #f589e9;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+.header-img {
+    width: 100%;
+    height: 420px;
+    object-fit: cover;
+    object-position: center;
+}
