--- a/CSS/about.css
+++ b/CSS/about.css
@@ -190,7 +190,7 @@ a:hover {
     .back-video1 {
         width: 53vw;
         height: 83vh;
-        transform: translate(0%, 10%);
+        transform: translate(-55%, 10%);
     }
 }
 
@@ -227,7 +227,7 @@ a:hover {
 
 .MainText {
     background-color: #000000;
-    width: 300%;
+    width: 400%;
     height: 20%;
 }
 .MainText div {
@@ -246,11 +246,13 @@ a:hover {
 .MainText div h5 {
     background: transparent;
     box-sizing: border-box;
-    width: 300%;
+    width: 33%;
     border: 3px solid red;
     min-height: 400x;
     color: rgb(255, 255, 255);
     font-size: 20px;
+    margin-left: 37%;
+    margin-top: -28%;
 }
 
 .textAreaColumn1 {
@@ -259,7 +261,7 @@ a:hover {
 }
 .textAreaColumn1 div {
     float: left;
-    width: 100%;
+    width: 33%;
     padding: 10px;
     box-sizing: border-box;
     color: rgb(255, 255, 255);
