--- a/CSS/guides.css
+++ b/CSS/guides.css
@@ -326,7 +326,7 @@ li {
 
 /* Style the search box inside the navigation bar */
 .topnav input[type=text] {
-  float: right;
+  float: left;
   padding: 6px;
   border: none;
   margin-top: 8px;
