--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -38,8 +38,24 @@ body {
     font-weight: 400px;
     font-family: "textFont";
 }
+/*MAIN HEADER WITH VIDEO BACKGROUND*/
 .header {
     height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(
+        rgba(12, 3, 51, 0.3),
+        rgba(12, 3, 51, 0.3)
+    );
+    display: flex;
+    align-items: center;
+    padding: 0 5%;
+    position: relative;
+    justify-content: center;
+}
+
+/*FOR post-page.html ONLY*/
+.header2 {
+    height: 10vh;
     width: 100%;
     background-image: linear-gradient(
         rgba(12, 3, 51, 0.3),
@@ -389,7 +405,10 @@ li {
     margin-top: 2rem !important;
 }
 .filter-item {
-    font-size: 0.9rem;
+    font-family: "headbarFont";
+    text-decoration: none;
+    color: #e9e9ff;
+    font-size: 1.1rem;
     font-weight: 500;
     cursor: pointer;
 }
@@ -427,9 +446,9 @@ li {
     color: rgb(239, 85, 108);
     font-family: "Montserrat", Helvetica, sans-serif;
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 15px;
     line-height: 28px;
-    font-weight: 500;
+    font-weight: 600;
     letter-spacing: 2px;
 }
 .post-title {
@@ -438,6 +457,7 @@ li {
     -webkit-box-orient: vertical;
     overflow: hidden;
     font-family: "h1Font", Arial, sans-serif;
+    text-decoration: none;
     font-weight: 700;
     font-size: 1.3rem;
     letter-spacing: 2px;
@@ -478,7 +498,7 @@ li {
     border: 2px solid #e75168;
 }
 .profile-name {
-    font-size: 0.82rem;
+    font-size: 0.85rem;
     font-weight: 500;
 }
 .footer {
@@ -508,7 +528,6 @@ li {
 .post-header {
     width: 100%;
     height: 500px;
-    background: #1c1a24;
 }
 .post-container {
     max-width: 800px;
@@ -537,4 +556,28 @@ li {
     height: 420px;
     object-fit: cover;
     object-position: center;
+}
+.post-content {
+    margin-top: 3rem !important;
+}
+.sub-heading {
+    color: rgb(239, 85, 108);
+    font-family: "Montserrat", Helvetica, sans-serif;
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 500;
+    letter-spacing: 2px;
+}
+
+/*Share Section*/
+.share {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1rem;
+}
+.share-title {
+    margin-top: 60px;
+    font-size: 1.1rem;
 }
