--- a/CSS/about.css
+++ b/CSS/about.css
@@ -208,8 +208,8 @@ a:hover {
     width: 130%;
     color: rgb(255, 255, 255);
     position: absolute;
-    top: -210px;
-    left: 75px;
+    top: -180px;
+    left: 70px;
     text-align: center;
     font-size: 60px;
     font-family: "h1Font";
@@ -217,7 +217,7 @@ a:hover {
 
 .MainText {
     background-color: #000000;
-    width: 400%;
+    width: 100%;
     height: 20%;
 }
 .MainText div {
@@ -236,12 +236,12 @@ a:hover {
 .MainText div h5 {
     background: transparent;
     box-sizing: border-box;
-    width: 33%;
+    width: 140%;
     min-height: 400px;
     color: rgb(255, 255, 255);
     font-size: 20px;
-    margin-left: 36%;
-    margin-top: -28%;
+    margin-left: 660px;
+    margin-top: -110%;
     text-align: center;
 }
 
@@ -261,7 +261,7 @@ a:hover {
     min-height: 400px;
     color: rgb(255, 255, 255);
     font-size: 29px;
-    text-align: center; 
+    text-align: center;
 }
 
 .textAreaColumn2 {
@@ -269,15 +269,16 @@ a:hover {
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: flex-start;    
 }
+
 .textAreaColumn2 h5 {
     background: transparent;
     box-sizing: border-box;
-    width: 400px;
+    width: 250px;
     height: 100px;
     color: rgb(255, 255, 255);
     font-size: 30px; 
-    margin-top: 0px;
 }
 
 .container {
@@ -286,7 +287,7 @@ a:hover {
     grid-gap: 20px;
     width: 80%;
     max-width: 1000px;
-    margin: auto; 
+    margin: 0 auto; 
 }
 
 .post-box {
@@ -297,7 +298,7 @@ a:hover {
     text-align: center;
     margin: 20px;
     transition: transform 0.3s;
-    max-width: 400px;
+    max-width: 450px;
     margin-left: auto;
     margin-right: auto;
 }
