--- a/CSS/about.css
+++ b/CSS/about.css
@@ -205,11 +205,11 @@ a:hover {
     overflow: hidden;
 }
 .main1 h1 {
-    width: 130%;
+    width: 50%;
     color: rgb(255, 255, 255);
     position: absolute;
     top: -180px;
-    left: 70px;
+    left: 610px;
     text-align: center;
     font-size: 60px;
     font-family: "h1Font";
@@ -222,8 +222,7 @@ a:hover {
 }
 .MainText div {
     float: left;
-    width: 33%;
-    padding: 10px;
+    width: 32%;
     box-sizing: border-box;
     color: rgb(255, 255, 255);
 }
@@ -240,7 +239,7 @@ a:hover {
     min-height: 400px;
     color: rgb(255, 255, 255);
     font-size: 20px;
-    margin-left: 660px;
+    margin-left: 680px;
     margin-top: -110%;
     text-align: center;
 }
@@ -249,6 +248,7 @@ a:hover {
     background-color: #000000;
     width: 100%;
     height: 100%;
+    margin-top: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -258,7 +258,7 @@ a:hover {
     background: transparent;
     box-sizing: border-box;
     width: 80%;
-    min-height: 400px;
+    min-height: 200px;
     color: rgb(255, 255, 255);
     font-size: 29px;
     text-align: center;
