--- a/CSS/about.css
+++ b/CSS/about.css
@@ -244,25 +244,29 @@ a:hover {
     text-align: center;
 }
 
-.textAreaColumn1 {
-    background-color: #000000;
-    width: 100%;
-    height: 100%;
-    margin-top: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    .textAreaColumn1 {
+        background-image: url(/images/background.webp);  
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+        height: 100%;
+        margin-top: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #ffffff;
+    }
 
-.textAreaColumn1 h5 {
-    background: transparent;
-    box-sizing: border-box;
-    width: 80%;
-    min-height: 200px;
-    color: rgb(255, 255, 255);
-    font-size: 29px;
-    text-align: center;
-}
+    .textAreaColumn1 h5 {
+        background: rgba(0, 0, 0, 0.5);
+        box-sizing: border-box;
+        width: 100%;
+        height: 400px;
+        color: rgb(255, 255, 255);
+        font-size: 29px;
+        text-align: center;
+        padding: 30px;
+    }
 
 .textAreaColumn2 {
     background-color: #000000;
@@ -277,6 +281,7 @@ a:hover {
     box-sizing: border-box;
     width: 250px;
     height: 100px;
+    margin-top: 100px;
     color: rgb(255, 255, 255);
     font-size: 30px; 
 }
